--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<div class="outer">
-  <div class="inner">1</div>
-  <div class="inner">2</div>
-  <div class="inner">3</div>
-  <div class="inner">4</div>
-</div>
+<div style="z-index: 1;">1</div>
+<div style="z-index: 2;">2</div>
+<div style="z-index: 3;">3</div>
+<div style="z-index: 4;">4</div>
+
