--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-<div style="z-index: 1;">1</div>
-<div style="z-index: 2;">2</div>
-<div style="z-index: 3;">3</div>
-<div style="z-index: 4;">4</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Responsive Image Map</title>
+    <style>
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>World Map</h1>
+    <img src="worldmap.jpg" usemap="#map">
+    <map name="map">
+        <!-- Image map areas go here -->
+    </map>
+</body>
+</html>
+
 
