--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <img src="worldmap.jpg" usemap="#map">
     <map name="map">
         <!-- Image map areas go here -->
+        <area shape="rect" coords="x1,y1,x2,y2" href="https://example.com">
+
     </map>
 </body>
 </html>
